@@ -1,4 +1,6 @@
 
+# server info
+server.port=${port:9000}
 
 # h2 database
 spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
@@ -13,3 +15,10 @@ logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=ERROR
 logging.level.org.thymeleaf=ERROR
 # logging.file
+
+
+# i18n for Thymeleaf messages
+spring.messages.basename=i18n/messages
+
+# For debug with Thymeleaf templates reload
+spring.thymeleaf.cache=false
