@@ -1,0 +1,1 @@
+customer.detail = Customer Detail
