@@ -1,0 +1,1 @@
+customer.detail = 客户详情
