@@ -5,6 +5,14 @@ source packages
 sprint boot
 h2 database
 integrate test
-Customer: domain, repository, service, controller, api, view(thymeleaf)
+Customer: domain, repository, service, controller, view(thymeleaf)
 log standard: slf4j, logback
+
+todo:
+write unittest for customer service crud
+optimize with css, js, image
+rest api design
 profile: prod, dev
+Thymeleaf i18n
+product and order
+
